# plasma-browser-integration

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  CMakeLists.txt  Messages.sh  README.md  StaticMessages.sh  chrome_install_locally_policy.in  dev_README.txt  extension.crx  org.kde.plasma.chrome_integration.json  org.kde.plasma.chrome_integration.json.in  org.kde.plasma.firefox_integration.json  org.kde.plasma.firefox_integration.json.in  rc.cpp
advert/: CMakeLists.txt  browserlaunchwatcher.cpp  browserlaunchwatcher.desktop  browserlaunchwatcher.h
dbus/: org.kde.krunner1.xml  org.kde.plasma.browser_integration.NotificationFilter.xml  org.kde.plasma.browser_integration.Settings.xml  org.kde.plasma.browser_integration.TabsRunner.xml  org.mpris.MediaPlayer2.Player.xml  org.mpris.MediaPlayer2.xml
extension/: action_popup-itinerary.js  action_popup.css  action_popup.html  action_popup.js  breeze-scroll-bars.css  constants.js  content-script-start.js  content-script.js  content-utils.js  extension-downloads.js  extension-historyrunner.js  extension-itinerary-quick-extractor.js  extension-itinerary.js  extension-kdeconnect.js  extension-mediaquery.js  extension-mpris.js  extension-notificationfilter.js  extension-purpose.js  extension-tabsrunner.js  extension-utils.js  extension.html  extension.js  i18n.js  manifest.json  options.css  options.html  options.js  page-script.js  permission-request.js  service-worker.js  style.css  ui_itinerary.js  utils.js  windowmapper.htm  windowmapper.js
extension/include/: compat-common.js  compat-content-script.js  constants.js  gsc.js  i18n.js  notifications.js  sweettooth-api.js  sync.js  update.js
flatpak-integrator/: CMakeLists.txt  Messages.sh  browserintegrationflatpakintegrator.json  data.qrc  flatpak-host-wrapper  plugin.cpp
host/: CMakeLists.txt  Messages.sh  abstractbrowserplugin.cpp  abstractbrowserplugin.h  abstractkrunnerplugin.cpp  abstractkrunnerplugin.h  config-host.h.cmake  connection.cpp  connection.h  dbusutils_p.h  downloadjob.cpp  downloadjob.h  downloadplugin.cpp  downloadplugin.h  historyrunnerplugin.cpp  historyrunnerplugin.h  incognitoplugin.cpp  incognitoplugin.h  itineraryextractorjob.cpp  itineraryextractorjob.h  itineraryplugin.cpp  itineraryplugin.h  kdeconnectjob.cpp  kdeconnectjob.h  kdeconnectplugin.cpp  kdeconnectplugin.h  main.cpp  mediaqueryplugin.cpp  mediaqueryplugin.h  mpris.cpp  mpris.h  mprisplayer.cpp  mprisplayer.h  mprisplugin.cpp  mprisplugin.h  notificationfilterplugin.cpp  notificationfilterplugin.h  org.kde.plasma.browser_integration.host.desktop.in  plasma-runner-browserhistory.desktop  plasma-runner-browsertabs.desktop  (+12 more)
po/ar/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ast/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/az/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/bg/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ca/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ca@valencia/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/cs/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/da/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/de/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/el/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/en_GB/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/eo/: plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/es/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/et/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/eu/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/fi/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/fr/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ga/: plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/gl/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/he/: plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/hi/: plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/hu/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ia/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/id/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/is/: plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/it/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ja/: plasma-browser-extension.po  plasma-browser-integration-host.po  plasma-browser-integration-reminder.po
po/ka/: plasma-browser-extension.po  plasma-browser-integration-host.po  (+1 more)
reminder/: CMakeLists.txt  Messages.sh  browserintegrationreminder.cpp  browserintegrationreminder.desktop  browserintegrationreminder.h  browserintegrationreminder.json
tabsrunner/: CMakeLists.txt  Messages.sh  plasma-runner-browsertabs.desktop  tabsrunner.cpp  tabsrunner.h
ui-templates/: README.txt  generate-templates.js  itinerary.ejs  package.json
util/: convertjsontopot.py  convertpottojson.py
(+116 files in other folders)
